[package]
name = "rollgui2"
version = "0.1.0"
edition = "2021"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
# IMPORTANT NOTE : When modifying quad dependencies, think about update the rolling js builder script
macroquad = "0.3"
egui = "0.18.1"
egui-macroquad = { path = "../egui-macroquad" }
quad-storage = "0.1.3"
structopt = "0.3.21"
serde = {version="1.0.104", features = ["derive"]}
serde_derive = "1.0.104"
serde_json = "1.0.44"
quad-net = { git = "https://github.com/not-fl3/quad-net", rev = "207da3a4b439ec45d878bde3995af8285940ae20" }
base64 = "0.13.0"
ureq = "2.4.0"
url = "2.1.1"
ahash = "0.7.6"
image = "0.24.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
