[package]
name = "rollgui2"
version = "0.11.0"
edition = "2021"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
# IMPORTANT NOTE : When modifying quad dependencies, think about update the rolling js builder script
macroquad = "0.3"
egui = "0.18.1"
egui-macroquad = { git = "https://github.com/buxx/egui-macroquad", rev = "9d529c5bc8eb7864439327ad19b5b40c986310c5" }
quad-storage = "0.1.3"
structopt = "0.3.21"
serde = {version="1.0.104", features = ["derive"]}
serde_derive = "1.0.104"
serde_json = "1.0.44"
quad-net = { git = "https://github.com/buxx/quad-net.git", rev = "d8e582c5001f977ec42e5f8dd21c1c0bbc9463e7" }
base64 = "0.13.0"
ureq = "2.4.0"
url = "2.1.1"
ahash = "0.7.6"
image = { version = "0.24.3", default-features = false, features = ["png"] }
default-env = "0.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
webbrowser = { version ="0.7.1", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
